# H5temperature

./: .gitignore  README.md  create_executable_linux.sh  create_executable_windows.bat  empty_gui.py  h5_temperature.py  h5temperature.py  h5temperature.spec  h5temperatureAbout.py  h5temperatureModels.py  h5temperaturePhysics.py  h5temperature_Physics.py  pyproject.toml  requirements.txt  run.py
h5temperature/: __init__.py  about.py  formats.py  mainwindow.py  models.py  physics.py  plots.py  tables.py  views.py
tests/: tests.py
